  - #4450, Speed up ST_GeometryType (Raúl Marín)
  - #4452, Add ST_TileEnvelope() (Paul Ramsey)
  - #4417, Update spatial_ref_sys with new entries (Paul Ramsey)
  - #4449, Speed up ST_X, ST_Y, ST_Z and ST_M (Raúl Marín)
  - #4456, add Rasbery Pi 32-bit jenkins bot for testing (Bruce Rindahl)
  - #4454, Speed up _ST_OrderingEquals (Raúl Marín)
  - #4453, Speed up ST_IsEmpty (Raúl Marín)

PostGIS 3.0.0alpha3
2019/07/01
For full changes and enhancements, refer to PostGIS 3.0.0.
This version requires PostgreSQL 9.5+-12 and GEOS >= 3.6+
Additional features enabled if you are running Proj6+ and PostgreSQL 12

* Major highlights *
  - #4414, Include version number in address_standardizer lib (Raúl Marín)
  - #4352, Use CREATE OR REPLACE AGGREGATE for PG12+ (Raúl Marín)
  - #4334, Fix upgrade issues related to renamed parameters (Raúl Marín)
  - #4388, AddRasterConstraints: Ignore NULLs when generating constraints (Raúl Marín)
  - #4327, Avoid pfree'ing the result of getenv (Raúl Marín)
  - #4406, Throw on invalid characters when decoding geohash (Raúl Marín)
  - #4429, Avoid resource leaks with PROJ6 (Raúl Marín)
  - #4372, PROJ6: Speed improvements (Raúl Marín)
  - #3437, Speed up ST_Intersects with Points (Raúl Marín)
  - #4438, Update serialization to support extended flags area (Paul Ramsey)
  - #4443, Fix wagyu configure dropping CPPFLAGS (Raúl Marín)
  - #4440, Type lookups in FDW fail (Paul Ramsey)
  - #4442, raster2pgsql now skips NODATA tiles. Use -k option if you still want
           them in database for some reason. (Darafei Praliaskouski)
  - #4441, Make GiST penalty friendly to multi-column indexes and build single-column
           ones faster. (Darafei Praliaskouski)

PostGIS 3.0.0alpha2
2019/06/02

* Major highlights *
  - #4404, Fix selectivity issue with support functions (Paul Ramsey)
  - #4311, Make wagyu the default option to validate polygons.
          This option requires a C++11 compiler and will use CXXFLAGS (not CFLAGS).